add margin-top to container

--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,10 @@ body {
     font-size: 28px;
     font-family: 'Times New Roman', Times, serif;
 }
+
+.container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
