--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,54 @@
 }
 
 body {
-    font-size: 28px;
-    font-family: 'Times New Roman', Times, serif;
+    background-color: #1f2937;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 19px;
+    color: darkgrey;
 }
 
-.container {
+.navbar .logo {
+    font-size: 29px;
+    color: #f9faf8;
+    font-weight: bolder;
+}
+
+.navbar > .container {
     display: flex;
     justify-content: space-around;
     margin-top: 20px;
+}
+
+ul, a {
+    display: flex;
+    text-decoration: none;
+    list-style-type: none;
+    color: darkgrey;
+    gap: 20px;
+}
+
+.header > .container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 90px;
+    padding: 10px 90px;
+    
+}
+
+h1 {
+    color: white;
+}
+
+.header .signup {
+    background-color: #3882f6;
+    color: white;
+    padding: 10px 28px;
+    border-radius: 9px;
+    margin-top: 20px;
+}
+
+.signup:hover {
+    color: black;
+    background-color: #2e6ccf;
 }
 
