--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 .navbar > .container {
     display: flex;
     justify-content: space-around;
-    margin-top: 20px;
+    margin-top: -50px;
 }
 
 ul, a {
@@ -34,13 +34,16 @@ ul, a {
 .header > .container {
     display: flex;
     justify-content: space-between;
-    margin-top: 90px;
-    padding: 10px 90px;
+    align-items: center;
+    margin-top: 10px;
+    padding: 10px 350px;
     
 }
 
-h1 {
+.header h1 {
     color: white;
+    line-height: 1.2;
+    padding: 40px;
 }
 
 .header .signup {
@@ -56,3 +59,99 @@ h1 {
     background-color: #2e6ccf;
 }
 
+.section {
+    background-color: white;
+    margin-top: 10px;
+}
+
+.section > h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    padding: 20px;
+    
+}
+
+.section .container {
+    display: flex;
+    justify-content: center;
+}
+
+.box {
+    display: flex;
+    padding: 10px;
+    margin: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.box p {
+    color: black;
+    border-radius: 13px;
+    border-style: solid;
+    border-color: #3882f6;
+    padding: 50px 20px;
+    margin: 40px;
+}
+
+.section1 {
+    background-color: darkgrey;
+    color: black;
+    padding: 80px;
+}
+
+.section1, .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 90px;
+}
+
+.section1 > .container > p {
+    font-size: 40px;
+}
+
+.section2 {
+    padding: 200px;
+    background-color: white;
+}
+
+.container-section2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 40px;
+    padding: 40px 20px;
+    background-color: #3882f6;
+    
+    border-style: solid;
+    border-color: #3882f6;
+}
+
+.box-section2 > .call-to-action {
+   font-weight: bolder;
+   color: white;
+   font-size: 30px;
+    
+}
+
+.section2 > .container-section2 > .signup2 {
+   
+   margin: 40px;
+   padding: 10px 40px;
+   border-radius: 14px;
+   border-style: solid;
+   border-color: white;
+   background-color: #3882f6;
+   color: white;
+   font-size: 20px;
+}
+
+.section2 > .container-section2 > .box-section2 > .signup {
+    color: white;
+}
+
+.footer > .container > p {
+    color: white;
+}
